--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,1 +1,9 @@
-﻿<h4>Welcome to SportsStore</h4>
+﻿@model IQueryable<Product>
+@foreach (var product in Model ?? Enumerable.Empty<Product>()) {
+	<div>
+		<h3>@product.Name</h3>
+		@product.Description
+		<h4>@product.Price.ToString("c")</h4>
+	</div>
+	<hr/>
+}
