--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,9 +1,20 @@
-﻿@model IQueryable<Product>
-@foreach (var product in Model ?? Enumerable.Empty<Product>()) {
-	<div>
-		<h3>@product.Name</h3>
-		@product.Description
-		<h4>@product.Price.ToString("c")</h4>
+﻿@model ProductsListViewModel
+@foreach (var p in Model.Products ?? Enumerable.Empty<Product>()) {
+	<div class="card card-outline-primary m-1 p-1">
+		<div class="bg-faded p-1">
+			<h4>
+				@p.Name
+				<span class="badge rounded-pill bg-primary text-white"
+				      style="float:right">
+					<small>@p.Price.ToString("c")</small>
+				</span>
+			</h4>
+		</div>
+		<div class="card-text p-1">@p.Description</div>
 	</div>
-	<hr/>
 }
+<div page-model="@Model.PagingInfo" page-action="Index"
+     page-classes-enabled="true" page-class="btn"
+     page-class-normal="btn-outline-dark"
+     page-class-selected="btn-primary" class="btn-group pull-right m-1">
+</div>
